stage 5 before refactoring (mostly working)