@@ -1,6 +1,5 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.distrubuted</groupId>
     <artifactId>stage5</artifactId>
     <version>1</version>
@@ -17,4 +16,23 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                <version>3.0.0-M5</version>-->
+<!--                <configuration>-->
+<!--                    <runOrder>alphabetical</runOrder>-->
+<!--                    <forkCount>1</forkCount>-->
+<!--                    <reuseForks>false</reuseForks>-->
+<!--&lt;!&ndash;                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <systemPropertyVariables>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </systemPropertyVariables>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>&ndash;&gt;-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
 </project>
